# cs-cloudflare-bouncer

./: .gitignore  .golangci.yml  Dockerfile  LICENSE  Makefile  Pipfile  README.md  clodflare_test.go  cloudflare.go  cloudflare_test.go  config.go  config.yaml  config_test.go  crowdsec.go  crowdsec_test.go  cs-cloudfare-bouncer.tgz  cs-cloudflare-bouncer.yaml  go.mod  go.sum  main.go  main_test.go  pytest.ini  uninstall.sh  upgrade.sh
.github/workflows/: build-binary-package.yml  go.yml  lint.yml  publish-docker-doc.yaml  release-drafter.yml  release_publish_docker-image.yml  tests.yml  tests_deb.yml
cmd/: root.go
config/: crowdsec-cloudflare-bouncer-docker.yaml  crowdsec-cloudflare-bouncer.service  crowdsec-cloudflare-bouncer.yaml  cs-cloudfare-bouncer.service  cs-cloudfare-bouncer.yaml  cs-cloudflare-bouncer.service  cs-cloudflare-bouncer.yaml
debian/: changelog  control  postinst  postrm  prerm  rules
docker/: README.md
pkg/cf/: cloudflare.go  cloudflare_test.go
pkg/cfg/: config.go  config_test.go  logging.go
pkg/cfg/testdata/: invalid_config_remedy.yaml  valid_config.yaml
rpm/SPECS/: crowdsec-cloudflare-bouncer.spec
scripts/: _bouncer.sh  install.sh  uninstall.sh  upgrade.sh
test/: conftest.py  pyproject.toml  pytest.ini  test_cloudflare_bouncer.py  test_scripts_no_crowdsec.py  test_scripts_nonroot.py  test_tls.py
test/bouncer/: test_cloudflare_bouncer.py  test_tls.py  test_yaml_local.py
test/install/no_crowdsec/: test_no_crowdsec_scripts.py
test/install/with_crowdsec/: test_crowdsec_deb.py  test_crowdsec_scripts.py
test/pkg/: test_build_rpm.py
test/tests/: conftest.py
test/tests/bouncer/: test_cloudflare_bouncer.py  test_tls.py
test/tests/install/no_crowdsec/: test_no_crowdsec_scripts.py
test/tests/install/with_crowdsec/: test_crowdsec_deb.py  test_crowdsec_scripts.py
test_data/: invalid_config_action.yaml  invalid_config_remedy.yaml  invalid_config_time.yaml  test_cache.json  valid_config.yaml
version/: version.go
